# movie-genie

./: .env.copy  .gitignore  README.md  import_movies.ipynb  index.html  linkedin_clustering.ipynb  package-lock.json  package.json  playground.ipynb  pyproject.toml
movie_genie/: api.py  database.py  log.py
public/: movie-images
src/: App.tsx  Footer.tsx  Header.tsx  Modal.tsx  SearchFilter.tsx  VisualGrid.tsx  index.css  types.d.ts
src/app/: App.tsx  Header.tsx  Modal.tsx  SearchButtons.tsx  SearchFilter.tsx  VisualGrid.tsx  layout.tsx  page.tsx  types.d.ts
src/app/api/movies/: route.ts
