[tool.poetry]
name = "movie-genie"
version = "0.1.0"
description = "LLM-based recommender that suggests great movies for you and your friends"
authors = ["Ignacio Avas <gmail@ignacioavas.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
kaggle = "^1.6.14"
pandas = "^2.2.2"
httpx = "^0.27.0"
pyarrow = "^16.1.0"
tqdm = "^4.66.4"
weaviate-client = "^4.6.4"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.0"
langchain = "^0.2.4"
langchain-text-splitters = "^0.2.1"
tiktoken = "^0.7.0"
langchain-weaviate = "^0.0.2"
spacy = "^3.7.5"
gensim = "^4.3.2"
scipy = "1.10.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
